# Metrics

./: .gitignore  CMakeLists.txt  readme.md
ExampleMetrics/: AverageMetric.cpp  AverageMetric.h  CMakeLists.txt  CounterMetric.cpp  CounterMetric.h  CpuPerformanceMetric.cpp  CpuPerformanceMetric.h  IMetric.h  MemoryUsageMetric.cpp  MemoryUsageMetric.h  RobotDetectionMetric.cpp  RobotDetectionMetric.h  UserClickCountMetric.cpp  UserClickCountMetric.h
MetricUtils/: CMakeLists.txt  ClickTracker.cpp  ClickTracker.h  MetricWriter.cpp  MetricsWriter.h
click/: CMakeLists.txt  ClickTracker.cpp  ClickTracker.h  RobotCount.cpp  RobotCount.h  RobotCountTest.cpp  readme.md
src/: main.cpp
